sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort: error: ambiguous reference to overloaded definition,
both method insertionSort in class AlgInsertionSort of type ()Unit
and  method insertionSort in class AlgInsertionSort of type ()Unit
match argument types ()
		insertionSort();
                ^AlgInsertionSort:8: error: method insertionSort is defined twice
  conflicting symbols both originated in file 'plm.runtime23.AlgInsertionSort'
def insertionSort() {var v:Int=0; var test:Boolean=false; var j:Int=0;
    ^